--- a/doc/book.bib
+++ b/doc/book.bib
@@ -178,3 +178,532 @@
   doi      = "10.1186/1471-2105-2-9",
   pmc      = "PMC59723"
 }
+
+
+@ARTICLE{Taberlet2012-pf,
+  title    = "{Environmental DNA}",
+  author   = "Taberlet, Pierre and Coissac, Eric and Hajibabaei, Mehrdad and
+              Rieseberg, Loren H",
+  journal  = "Molecular ecology",
+  volume   =  21,
+  number   =  8,
+  pages    = "1789--1793",
+  month    =  apr,
+  year     =  2012,
+  url      = "http://dx.doi.org/10.1111/j.1365-294X.2012.05542.x",
+  language = "en",
+  issn     = "0962-1083, 1365-294X",
+  pmid     = "22486819",
+  doi      = "10.1111/j.1365-294X.2012.05542.x"
+}
+
+
+@ARTICLE{Sogin2006-ab,
+  title    = "{Microbial diversity in the deep sea and the underexplored "rare
+              biosphere"}",
+  author   = "Sogin, Mitchell L and Morrison, Hilary G and Huber, Julie A and
+              Mark Welch, David and Huse, Susan M and Neal, Phillip R and
+              Arrieta, Jesus M and Herndl, Gerhard J",
+  abstract = "The evolution of marine microbes over billions of years predicts
+              that the composition of microbial communities should be much
+              greater than the published estimates of a few thousand distinct
+              kinds of microbes per liter of seawater. By adopting a massively
+              parallel tag sequencing strategy, we show that bacterial
+              communities of deep water masses of the North Atlantic and
+              diffuse flow hydrothermal vents are one to two orders of
+              magnitude more complex than previously reported for any microbial
+              environment. A relatively small number of different populations
+              dominate all samples, but thousands of low-abundance populations
+              account for most of the observed phylogenetic diversity. This
+              ``rare biosphere'' is very ancient and may represent a nearly
+              inexhaustible source of genomic innovation. Members of the rare
+              biosphere are highly divergent from each other and, at different
+              times in earth's history, may have had a profound impact on
+              shaping planetary processes.",
+  journal  = "Proceedings of the National Academy of Sciences of the United
+              States of America",
+  volume   =  103,
+  number   =  32,
+  pages    = "12115--12120",
+  month    =  aug,
+  year     =  2006,
+  url      = "http://dx.doi.org/10.1073/pnas.0605127103",
+  issn     = "0027-8424",
+  pmid     = "16880384",
+  doi      = "10.1073/pnas.0605127103",
+  pmc      = "PMC1524930"
+}
+
+
+@ARTICLE{Sonstebo2010-vv,
+  title    = "{Using next-generation sequencing for molecular reconstruction of
+              past Arctic vegetation and climate}",
+  author   = "S{\o}nsteb{\o}, J H and Gielly, L and Brysting, A K and Elven, R
+              and Edwards, M and Haile, J and Willerslev, E and Coissac, E and
+              Rioux, D and Sannier, J and Taberlet, P and Brochmann, C",
+  abstract = "Palaeoenvironments and former climates are typically inferred
+              from pollen and macrofossil records. This approach is
+              time-consuming and suffers from low taxonomic resolution and
+              biased taxon sampling. Here, we test an alternative DNA-based
+              approach utilizing the P6 loop in the chloroplast trnL (UAA)
+              intron; a short (13-158 bp) and variable region with highly
+              conserved flanking sequences. For taxonomic reference, a whole
+              trnL intron sequence database was constructed from recently
+              collected material of 842 species, representing all widespread
+              and/or ecologically important taxa of the species-poor arctic
+              flora. The P6 loop alone allowed identification of all families,
+              most genera (>75\%) and one-third of the species, thus providing
+              much higher taxonomic resolution than pollen records. The
+              suitability of the P6 loop for analysis of samples containing
+              degraded ancient DNA from a mixture of species is demonstrated by
+              high-throughput parallel pyrosequencing of permafrost-preserved
+              DNA and reconstruction of two plant communities from the last
+              glacial period. Our approach opens new possibilities for
+              DNA-based assessment of ancient as well as modern biodiversity of
+              many groups of organisms using environmental samples.",
+  journal  = "Molecular ecology resources",
+  volume   =  10,
+  number   =  6,
+  pages    = "1009--1018",
+  month    =  nov,
+  year     =  2010,
+  url      = "http://dx.doi.org/10.1111/j.1755-0998.2010.02855.x",
+  language = "en",
+  issn     = "1755-098X, 1755-0998",
+  pmid     = "21565110",
+  doi      = "10.1111/j.1755-0998.2010.02855.x"
+}
+
+@ARTICLE{Yoccoz2012-ix,
+  title    = "{DNA from soil mirrors plant taxonomic and growth form diversity}",
+  author   = "Yoccoz, N G and Br{\aa}then, K A and Gielly, L and Haile, J and
+              Edwards, M E and Goslar, T and Von Stedingk, H and Brysting, A K
+              and Coissac, E and Pompanon, F and S{\o}nsteb{\o}, J H and
+              Miquel, C and Valentini, A and De Bello, F and Chave, J and
+              Thuiller, W and Wincker, P and Cruaud, C and Gavory, F and
+              Rasmussen, M and Gilbert, M T P and Orlando, L and Brochmann, C
+              and Willerslev, E and Taberlet, P",
+  abstract = "Ecosystems across the globe are threatened by climate change and
+              human activities. New rapid survey approaches for monitoring
+              biodiversity would greatly advance assessment and understanding
+              of these threats. Taking advantage of next-generation DNA
+              sequencing, we tested an approach we call metabarcoding:
+              high-throughput and simultaneous taxa identification based on a
+              very short (usually <100 base pairs) but informative DNA
+              fragment. Short DNA fragments allow the use of degraded DNA from
+              environmental samples. All analyses included amplification using
+              plant-specific versatile primers, sequencing and estimation of
+              taxonomic diversity. We tested in three steps whether degraded
+              DNA from dead material in soil has the potential of efficiently
+              assessing biodiversity in different biomes. First, soil DNA from
+              eight boreal plant communities located in two different
+              vegetation types (meadow and heath) was amplified. Plant
+              diversity detected from boreal soil was highly consistent with
+              plant taxonomic and growth form diversity estimated from
+              conventional above-ground surveys. Second, we assessed DNA
+              persistence using samples from formerly cultivated soils in
+              temperate environments. We found that the number of crop DNA
+              sequences retrieved strongly varied with years since last
+              cultivation, and crop sequences were absent from nearby,
+              uncultivated plots. Third, we assessed the universal
+              applicability of DNA metabarcoding using soil samples from
+              tropical environments: a large proportion of species and families
+              from the study site were efficiently recovered. The results open
+              unprecedented opportunities for large-scale DNA-based
+              biodiversity studies across a range of taxonomic groups using
+              standardized metabarcoding approaches.",
+  journal  = "Molecular ecology",
+  volume   =  21,
+  number   =  15,
+  pages    = "3647--3655",
+  month    =  aug,
+  year     =  2012,
+  url      = "http://dx.doi.org/10.1111/j.1365-294X.2012.05545.x",
+  language = "en",
+  issn     = "0962-1083, 1365-294X",
+  pmid     = "22507540",
+  doi      = "10.1111/j.1365-294X.2012.05545.x"
+}
+
+
+@ARTICLE{Parducci2012-rn,
+  title    = "{Glacial survival of boreal trees in northern Scandinavia}",
+  author   = "Parducci, Laura and J{\o}rgensen, Tina and Tollefsrud, Mari Mette
+              and Elverland, Ellen and Alm, Torbj{\o}rn and Fontana, Sonia L
+              and Bennett, K D and Haile, James and Matetovici, Irina and
+              Suyama, Yoshihisa and Edwards, Mary E and Andersen, Kenneth and
+              Rasmussen, Morten and Boessenkool, Sanne and Coissac, Eric and
+              Brochmann, Christian and Taberlet, Pierre and Houmark-Nielsen,
+              Michael and Larsen, Nicolaj Krog and Orlando, Ludovic and
+              Gilbert, M Thomas P and Kj{\ae}r, Kurt H and Alsos, Inger Greve
+              and Willerslev, Eske",
+  abstract = "It is commonly believed that trees were absent in Scandinavia
+              during the last glaciation and first recolonized the Scandinavian
+              Peninsula with the retreat of its ice sheet some 9000 years ago.
+              Here, we show the presence of a rare mitochondrial DNA haplotype
+              of spruce that appears unique to Scandinavia and with its highest
+              frequency to the west-an area believed to sustain ice-free
+              refugia during most of the last ice age. We further show the
+              survival of DNA from this haplotype in lake sediments and pollen
+              of Tr{\o}ndelag in central Norway dating back ~10,300 years and
+              chloroplast DNA of pine and spruce in lake sediments adjacent to
+              the ice-free And{\o}ya refugium in northwestern Norway as early
+              as ~22,000 and 17,700 years ago, respectively. Our findings imply
+              that conifer trees survived in ice-free refugia of Scandinavia
+              during the last glaciation, challenging current views on survival
+              and spread of trees as a response to climate changes.",
+  journal  = "Science",
+  volume   =  335,
+  number   =  6072,
+  pages    = "1083--1086",
+  month    =  mar,
+  year     =  2012,
+  url      = "http://dx.doi.org/10.1126/science.1216043",
+  language = "en",
+  issn     = "0036-8075, 1095-9203",
+  pmid     = "22383845",
+  doi      = "10.1126/science.1216043"
+}
+
+
+@MISC{Chariton2010-cz,
+  title   = "{Influence of the choice of physical and chemistry variables on
+             interpreting patterns of sediment contaminants and their
+             relationships with estuarine macrobenthic communities}",
+  author  = "Chariton, Anthony A and Roach, Anthony C and Simpson, Stuart L and
+             Batley, Graeme E",
+  journal = "Marine and Freshwater Research",
+  volume  =  61,
+  number  =  10,
+  pages   = "1109",
+  year    =  2010,
+  url     = "http://dx.doi.org/10.1071/mf09263",
+  doi     = "10.1071/mf09263"
+}
+
+
+@ARTICLE{Baldwin2013-yc,
+  title     = "{Impacts of inundation and drought on eukaryote biodiversity in
+               semi-arid floodplain soils}",
+  author    = "Baldwin, Darren S and Colloff, Matthew J and Rees, Gavin N and
+               Chariton, Anthony A and Watson, Garth O and Court, Leon N and
+               Hartley, Diana M and Morgan, Matthew J and King, Andrew J and
+               Wilson, Jessica S and Hodda, Michael and Hardy, Christopher M",
+  abstract  = "Floodplain ecosystems are characterized by alternating wet and
+               dry phases and periodic inundation defines their ecological
+               character. Climate change, river regulation and the construction
+               of levees have substantially altered natural flooding and drying
+               regimes worldwide with uncertain effects on key biotic groups.
+               In southern Australia, we hypothesized that soil eukaryotic
+               communities in climate change affected areas of a semi-arid
+               floodplain would transition towards comprising mainly dry-soil
+               specialist species with increasing drought severity. Here, we
+               used 18S rRNA amplicon pyrosequencing to measure the eukaryote
+               community composition in soils that had been depleted of water
+               to varying degrees to confirm that reproducible transitional
+               changes occur in eukaryotic biodiversity on this floodplain.
+               Interflood community structures (3 years post-flood) were
+               dominated by persistent rather than either aquatic or
+               dry-specialist organisms. Only 2\% of taxa were unique to dry
+               locations by 8 years post-flood, and 10\% were restricted to wet
+               locations (inundated a year to 2 weeks post-flood). Almost half
+               (48\%) of the total soil biota were detected in both these
+               environments. The discovery of a large suite of organisms able
+               to survive nearly a decade of drought, and up to a year
+               submerged supports the concept of inherent resilience of
+               Australian semi-arid floodplain soil communities under
+               increasing pressure from climatic induced changes in water
+               availability.",
+  journal   = "Molecular ecology",
+  publisher = "Wiley Online Library",
+  volume    =  22,
+  number    =  6,
+  pages     = "1746--1758",
+  month     =  mar,
+  year      =  2013,
+  url       = "http://dx.doi.org/10.1111/mec.12190",
+  issn      = "0962-1083, 1365-294X",
+  pmid      = "23379967",
+  doi       = "10.1111/mec.12190"
+}
+
+
+@ARTICLE{Andersen2012-gj,
+  title     = "{Meta-barcoding of {\"e}dirt{\'\i}DNA from soil reflects
+               vertebrate biodiversity}",
+  author    = "Andersen, Kenneth and Bird, Karen Lise and Rasmussen, Morten and
+               Haile, James and Breuning-Madsen, Henrik and Kjaer, Kurt H and
+               Orlando, Ludovic and Gilbert, M Thomas P and Willerslev, Eske",
+  journal   = "Molecular ecology",
+  publisher = "Wiley Online Library",
+  volume    =  21,
+  number    =  8,
+  pages     = "1966--1979",
+  year      =  2012,
+  issn      = "0962-1083"
+}
+
+
+@ARTICLE{Thomsen2012-au,
+  title    = "{Monitoring endangered freshwater biodiversity using environmental
+              DNA}",
+  author   = "Thomsen, Philip Francis and Kielgast, Jos and Iversen, Lars L and
+              Wiuf, Carsten and Rasmussen, Morten and Gilbert, M Thomas P and
+              Orlando, Ludovic and Willerslev, Eske",
+  abstract = "Freshwater ecosystems are among the most endangered habitats on
+              Earth, with thousands of animal species known to be threatened or
+              already extinct. Reliable monitoring of threatened organisms is
+              crucial for data-driven conservation actions but remains a
+              challenge owing to nonstandardized methods that depend on
+              practical and taxonomic expertise, which is rapidly declining.
+              Here, we show that a diversity of rare and threatened freshwater
+              animals--representing amphibians, fish, mammals, insects and
+              crustaceans--can be detected and quantified based on DNA obtained
+              directly from small water samples of lakes, ponds and streams. We
+              successfully validate our findings in a controlled mesocosm
+              experiment and show that DNA becomes undetectable within 2 weeks
+              after removal of animals, indicating that DNA traces are near
+              contemporary with presence of the species. We further demonstrate
+              that entire faunas of amphibians and fish can be detected by
+              high-throughput sequencing of DNA extracted from pond water. Our
+              findings underpin the ubiquitous nature of DNA traces in the
+              environment and establish environmental DNA as a tool for
+              monitoring rare and threatened species across a wide range of
+              taxonomic groups.",
+  journal  = "Molecular ecology",
+  volume   =  21,
+  number   =  11,
+  pages    = "2565--2573",
+  month    =  jun,
+  year     =  2012,
+  url      = "http://dx.doi.org/10.1111/j.1365-294X.2011.05418.x",
+  issn     = "0962-1083, 1365-294X",
+  pmid     = "22151771",
+  doi      = "10.1111/j.1365-294X.2011.05418.x"
+}
+
+
+@ARTICLE{Valentini2009-ay,
+  title     = "{New perspectives in diet analysis based on DNA barcoding and
+               parallel pyrosequencing: the trnL approach}",
+  author    = "Valentini, Alice and Miquel, Christian and Nawaz, Muhammad Ali
+               and Bellemain, Eva and Coissac, Eric and Pompanon, Fran{\c c}ois
+               and Gielly, Ludovic and Cruaud, Corinne and Nascetti, Giuseppe
+               and Wincker, Patrick and Swenson, Jon E and Taberlet, Pierre",
+  abstract  = "The development of DNA barcoding (species identification using a
+               standardized DNA sequence), and the availability of recent DNA
+               sequencing techniques offer new possibilities in diet analysis.
+               DNA fragments shorter than 100-150 bp remain in a much higher
+               proportion in degraded DNA samples and can be recovered from
+               faeces. As a consequence, by using universal primers that
+               amplify a very short but informative DNA fragment, it is
+               possible to reliably identify the plant taxon that has been
+               eaten. According to our experience and using this identification
+               system, about 50\% of the taxa can be identified to species
+               using the trnL approach, that is, using the P6 loop of the
+               chloroplast trnL (UAA) intron. We demonstrated that this new
+               method is fast, simple to implement, and very robust. It can be
+               applied for diet analyses of a wide range of phytophagous
+               species at large scales. We also demonstrated that our approach
+               is efficient for mammals, birds, insects and molluscs. This
+               method opens new perspectives in ecology, not only by allowing
+               large-scale studies on diet, but also by enhancing studies on
+               resource partitioning among competing species, and describing
+               food webs in ecosystems.",
+  journal   = "Molecular ecology resources",
+  publisher = "WILEY-BLACKWELL PUBLISHING, INC",
+  volume    =  9,
+  number    =  1,
+  pages     = "51--60",
+  month     =  jan,
+  year      =  2009,
+  url       = "http://dx.doi.org/10.1111/j.1755-0998.2008.02352.x",
+  address   = "COMMERCE PLACE, 350 MAIN ST, MALDEN 02148, MA USA",
+  keywords  = "chloroplast DNA; diet analysis; DNA barcoding; faeces;
+               pyrosequencing; trnL (UAA) intron; universal primers",
+  language  = "en",
+  issn      = "1755-098X",
+  pmid      = "21564566",
+  doi       = "10.1111/j.1755-0998.2008.02352.x"
+}
+
+
+@ARTICLE{Kowalczyk2011-kg,
+  title     = "{Influence of management practices on large herbivore diet---Case
+               of European bison in Bia{\l}owie{\.z}a Primeval Forest (Poland)}",
+  author    = "Kowalczyk, Rafa{\l} and Taberlet, Pierre and Coissac, Eric and
+               Valentini, Alice and Miquel, Christian and Kami{\'n}ski, Tomasz
+               and W{\'o}jcik, Jan M",
+  abstract  = "Large herbivores are keystone species in many forest areas, as
+               they shape the structure, species diversity and functioning of
+               those ecosystems. The European bison Bison bonasus has been
+               successfully restored after extinction in the wild at the
+               beginning of 20th century. As free-ranging populations of the
+               species were re-established mainly in forest habitats, knowledge
+               of the impact by the largest European terrestrial mammal on tree
+               stands is essential. This helps to make management and
+               conservation decisions for viable population maintenance of the
+               species in the wild. Using a novel DNA-based method of herbivore
+               diet analysis, the trnL approach (DNA-barcoding), we
+               investigated the influence of different foraging conditions
+               (access to supplementary fodder) on bison diet in winter and its
+               potential impact on woody species. Faecal samples were collected
+               from different bison treatment groups: (1) intensively fed; (2)
+               less intensively fed; (3) non-fed utilising forest habitats; and
+               (4) non-fed utilising agricultural areas surrounding the Forest.
+               These were analysed to estimate the proportion of different
+               plant groups consumed by bison. Bison groups differed
+               significantly in their diet. The amount of woody materials
+               (trees and shrubs) consumed by bison increased with decreasing
+               access to supplementary fodder, ranging from 16\% in intensively
+               fed bison to 65\% in non-fed bison utilising forest habitats.
+               Inversely, the amount of herbs, grasses and sedges decreased
+               from 82\% in intensively fed bison to 32\% in non fed bison
+               utilising forest habitats. The species of trees mainly browsed
+               by bison, Carpinus/Corylus, Betula sp. and Salix sp., were of
+               lower economic importance for forest management. The impact of
+               bison on tree species needs further investigation, however, we
+               can predict that browsing by bison, mainly on Carpinus/Corylus,
+               makes an insignificant impact on forestry due to the high and
+               increasing representation of this species in the forest
+               understory. Supplementary feeding has several negative effects
+               on bison ecology and health, therefore reduced and distributed
+               supplementary feeding should be applied as the management
+               practice in the Bia{\l}owie{\.z}a Forest.",
+  journal   = "Forest ecology and management",
+  publisher = "ELSEVIER SCIENCE BV",
+  volume    =  261,
+  number    =  4,
+  pages     = "821--828",
+  month     =  feb,
+  year      =  2011,
+  url       = "http://www.sciencedirect.com/science/article/pii/S0378112710006961",
+  annote    = "di",
+  address   = "PO BOX 211, 1000 AE AMSTERDAM, NETHERLANDS",
+  keywords  = "Bison bonasus; trnL approach; DNA barcoding; Diet analysis;
+               Large ungulates; Wildlife management; L approach",
+  language  = "English",
+  issn      = "0378-1127",
+  doi       = "10.1016/j.foreco.2010.11.026"
+}
+
+
+@ARTICLE{Deagle2009-yh,
+  title    = "{Analysis of Australian fur seal diet by pyrosequencing prey DNA
+              in faeces}",
+  author   = "Deagle, Bruce E and Kirkwood, Roger and Jarman, Simon N",
+  abstract = "DNA-based techniques have proven useful for defining trophic
+              links in a variety of ecosystems and recently developed
+              sequencing technologies provide new opportunities for dietary
+              studies. We investigated the diet of Australian fur seals
+              (Arctocephalus pusillus doriferus) by pyrosequencing prey DNA
+              from faeces collected at three breeding colonies across the
+              seals' range. DNA from 270 faecal samples was amplified with four
+              polymerase chain reaction primer sets and a blocking primer was
+              used to limit amplification of fur seal DNA. Pooled amplicons
+              from each colony were sequenced using the Roche GS-FLX platform,
+              generating > 20,000 sequences. Software was developed to sort and
+              group similar sequences. A total of 54 bony fish, 4 cartilaginous
+              fish and 4 cephalopods were identified based on the most
+              taxonomically informative amplicons sequenced (mitochondrial
+              16S). The prevalence of sequences from redbait (Emmelichthys
+              nitidus) and jack mackerel (Trachurus declivis) confirm the
+              importance of these species in the seals' diet. A third fish
+              species, blue mackerel (Scomber australasicus), may be a more
+              important prey species than previously recognised. There were
+              major differences in the proportions of prey DNA recovered in
+              faeces from different colonies, probably reflecting differences
+              in prey availability. Parallel hard-part analysis identified
+              largely the same main prey species as did the DNA-based
+              technique, but with lower species diversity and no remains from
+              cartilaginous prey. The pyrosequencing approach presented
+              significantly expands the capabilities of DNA-based methods of
+              dietary analysis and is suitable for large-scale diet
+              investigations on a broad range of animals.",
+  journal  = "Molecular ecology",
+  volume   =  18,
+  number   =  9,
+  pages    = "2022--2038",
+  month    =  may,
+  year     =  2009,
+  url      = "http://dx.doi.org/10.1111/j.1365-294X.2009.04158.x",
+  issn     = "0962-1083, 1365-294X",
+  pmid     = "19317847",
+  doi      = "10.1111/j.1365-294X.2009.04158.x"
+}
+
+
+@ARTICLE{Shehzad2012-pn,
+  title     = "{Carnivore diet analysis based on next-generation sequencing:
+               Application to the leopard cat (Prionailurus bengalensis) in
+               Pakistan}",
+  author    = "Shehzad, Wasim and Riaz, Tiayyba and Nawaz, Muhammad A and
+               Miquel, Christian and Poillot, Carole and Shah, Safdar A and
+               Pompanon, Francois and Coissac, Eric and Taberlet, Pierre",
+  journal   = "Molecular ecology",
+  publisher = "Wiley Online Library",
+  volume    =  21,
+  number    =  8,
+  pages     = "1951--1965",
+  year      =  2012,
+  url       = "https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.2011.05424.x",
+  issn      = "0962-1083"
+}
+
+
+@ARTICLE{Schloss2009-qy,
+  title    = "{Introducing mothur: open-source, platform-independent,
+              community-supported software for describing and comparing
+              microbial communities}",
+  author   = "Schloss, Patrick D and Westcott, Sarah L and Ryabin, Thomas and
+              Hall, Justine R and Hartmann, Martin and Hollister, Emily B and
+              Lesniewski, Ryan A and Oakley, Brian B and Parks, Donovan H and
+              Robinson, Courtney J and Sahl, Jason W and Stres, Blaz and
+              Thallinger, Gerhard G and Van Horn, David J and Weber, Carolyn F",
+  abstract = "mothur aims to be a comprehensive software package that allows
+              users to use a single piece of software to analyze community
+              sequence data. It builds upon previous tools to provide a
+              flexible and powerful software package for analyzing sequencing
+              data. As a case study, we used mothur to trim, screen, and align
+              sequences; calculate distances; assign sequences to operational
+              taxonomic units; and describe the alpha and beta diversity of
+              eight marine samples previously characterized by pyrosequencing
+              of 16S rRNA gene fragments. This analysis of more than 222,000
+              sequences was completed in less than 2 h with a laptop computer.",
+  journal  = "Applied and environmental microbiology",
+  volume   =  75,
+  number   =  23,
+  pages    = "7537--7541",
+  month    =  dec,
+  year     =  2009,
+  url      = "http://dx.doi.org/10.1128/AEM.01541-09",
+  issn     = "0099-2240, 1098-5336",
+  pmid     = "19801464",
+  doi      = "10.1128/AEM.01541-09",
+  pmc      = "PMC2786419"
+}
+
+
+@ARTICLE{Caporaso2010-ii,
+  title   = "{QIIME allows analysis of high-throughput community sequencing data}",
+  author  = "Caporaso, J Gregory and Kuczynski, Justin and Stombaugh, Jesse and
+             Bittinger, Kyle and Bushman, Frederic D and Costello, Elizabeth K
+             and Fierer, Noah and Pe{\~n}a, Antonio Gonzalez and Goodrich,
+             Julia K and Gordon, Jeffrey I and Huttley, Gavin A and Kelley,
+             Scott T and Knights, Dan and Koenig, Jeremy E and Ley, Ruth E and
+             Lozupone, Catherine A and McDonald, Daniel and Muegge, Brian D and
+             Pirrung, Meg and Reeder, Jens and Sevinsky, Joel R and Turnbaugh,
+             Peter J and Walters, William A and Widmann, Jeremy and Yatsunenko,
+             Tanya and Zaneveld, Jesse and Knight, Rob",
+  journal = "Nature methods",
+  volume  =  7,
+  number  =  5,
+  pages   = "335--336",
+  month   =  may,
+  year    =  2010,
+  url     = "http://dx.doi.org/10.1038/nmeth.f.303",
+  issn    = "1548-7091, 1548-7105",
+  pmid    = "20383131",
+  doi     = "10.1038/nmeth.f.303",
+  pmc     = "PMC3156573"
+}
