--- a/doc/commands.qmd
+++ b/doc/commands.qmd
@@ -6,13 +6,13 @@
 
 ### Specifying input format
 
-Five sequence formats are accepted for input files. [Fasta](#fasta-classical "Fasta format description") and [Fastq](#fastq-classical "Fastq format description") are the main ones, EMBL and Genbank allow the use of flat files produced by these two international databases. The last one, ecoPCR, is maintained for compatibility with previous *OBITools* and allows to read *ecoPCR* outputs as sequence files.
+Five sequence formats are accepted for input files. *Fasta* (@sec-fasta) and *Fastq* (@sec-fastq) are the main ones, EMBL and Genbank allow the use of flat files produced by these two international databases. The last one, ecoPCR, is maintained for compatibility with previous *OBITools* and allows to read *ecoPCR* outputs as sequence files.
 
 -   `--ecopcr` : Read data following the *ecoPCR* output format.
 -   `--embl` Read data following the *EMBL* flatfile format.
 -   `--genbank` Read data following the *Genbank* flatfile format.
 
-Several encoding schemes have been proposed for quality scores in [Fastq](#fastq-classical "Fastq format description") format. Currently, *OBITools* considers Sanger encoding as the standard. For reasons of compatibility with older datasets produced with *Solexa* sequencers, it is possible, by using the following option, to force the use of the corresponding quality encoding scheme when reading these older files.
+Several encoding schemes have been proposed for quality scores in *Fastq* format. Currently, *OBITools* considers Sanger encoding as the standard. For reasons of compatibility with older datasets produced with *Solexa* sequencers, it is possible, by using the following option, to force the use of the corresponding quality encoding scheme when reading these older files.
 
 -   `--solexa` Decodes quality string according to the Solexa specification. (default: false)
 
@@ -25,11 +25,12 @@ Only two output sequence formats are supported by OBITools, Fasta and Fastq. Fas
 
 OBITools allows multiple input files to be specified for a single command.
 
--   `--no-order` When several input files are provided, indicates that there is no order among them. (default: false)
+-   `--no-order` When several input files are provided, indicates that there is no order among them. (default: false). 
+                 Using such option can increase a lot the processing of the data.
 
-### Format of the annotations in Fasta and Fastq files
+### The Fasta and Fastq annotations format
 
-OBITools extend the [Fasta](#fasta-classical "Fasta format description") and [Fastq](#fastq-classical "Fastq format description") formats by introducing a format for the title lines of these formats allowing to annotate every sequence. While the previous version of OBITools used an *ad-hoc* format for these annotation, this new version introduce the usage of the standard JSON format to store them.
+OBITools extend the [Fasta](#the-fasta-sequence-format) and [Fastq](#the-fastq-sequence-format) formats by introducing a format for the title lines of these formats allowing to annotate every sequence. While the previous version of OBITools used an *ad-hoc* format for these annotation, this new version introduce the usage of the standard JSON format to store them.
 
 On input, OBITools automatically recognize the format of the annotations, but two options allows to force the parsing following one of them. You should normally not need to use these options.
 
